fix: some broken links and images

--- a/src/components/home/Projects.astro
+++ b/src/components/home/Projects.astro
@@ -19,7 +19,7 @@ const projects = [
     description: `The Jewelry Store Business Management Software.
 
 CaratIQ helps you increase revenue, decrease costs, and easily manage your jewelry store operations.`,
-    screenshot: 'https://api.pikwy.com/web/675fe6f120c87a6bb621099c.jpg',
+    screenshot: '/projects/caratiq.png',
     techs: [TECHS.nextjs, TECHS.tailwindcss, TECHS.framer_motion, TECHS.strapi],
   },
   {
@@ -28,7 +28,7 @@ CaratIQ helps you increase revenue, decrease costs, and easily manage your jewel
     description: `PEV News is a website specialized in E-Vehicles news, It's a fullstack project.
     
     we handled the frontend with NextJS and the cms was Strapi.`,
-    screenshot: 'https://api.pikwy.com/web/675fee69d5a054770675db21.jpg',
+    screenshot: '/projects/pev.png',
     techs: [TECHS.nextjs, TECHS.tailwindcss, TECHS.strapi],
   },
 ];
