--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Pendulum from '~/components/home/Pendulum.astro';
 import Projects from '~/components/home/Projects.astro';
 
 const metadata = {
-  title: 'AstroWind — Free template for creating websites with Astro + Tailwind CSS',
+  title: "Dev Smith's portfolio",
   ignoreTitleTemplate: true,
 };
 ---
@@ -14,7 +14,7 @@ const metadata = {
 
   <section class="container mx-auto mt-16">
     <h1 class="text-7xl lg:text-8xl font-bold font-heading dark:text-gray-200">
-      I'm <a class="text-secondary" href="https://www.aldiwan.net/poem26279.html" target="_blank">Dev Smith</a>
+      I'm <a class="text-secondary" href="https://updatefaker.com/xp/index.html" target="_blank">Dev Smith</a>
     </h1>
 
     <h2 class="text-xl lg:text-2xl text-muted mb-6 dark:text-slate-300">
